# lox

./: README.md
Interpreter/: .clang-format  .clangd  .gitignore  CMakeLists.txt  ilox.cpp  test.lox  where_am_i
Interpreter/internals/: CMakeLists.txt  ast.cpp  ast.hpp  nil.cpp  nil.hpp  object.cpp  object.hpp  parse.cpp  parse.hpp  scanner.cpp  scanner.hpp  token.hpp
Interpreter/internals/ast/: ast_forward.hpp  binary.cpp  binary.hpp  environment.cpp  environment.hpp  expression.cpp  expression.hpp  expression_stmt.hpp  expression_type.hpp  grouping.cpp  grouping.hpp  literal.cpp  literal.hpp  print_stmt.hpp  printer.cpp  printer.hpp  statement.cpp  statement.hpp  statement_type.hpp  unary.cpp  unary.hpp  var_decl_stmt.cpp  var_decl_stmt.hpp  variable.cpp  variable.hpp
Interpreter/internals/ast/expressions/: assignment.cpp  assignment.hpp  binary.cpp  binary.hpp  call.cpp  call.hpp  expression_type.hpp  grouping.cpp  grouping.hpp  literal.cpp  literal.hpp  logical.cpp  logical.hpp  unary.cpp  unary.hpp  variable.cpp  variable.hpp
Interpreter/internals/ast/statements/: block.cpp  block.hpp  expression_stmt.cpp  expression_stmt.hpp  fun_decl_stmt.cpp  fun_decl_stmt.hpp  if_stmt.cpp  if_stmt.hpp  print_stmt.cpp  print_stmt.hpp  printer.cpp  printer.hpp  return_stmt.cpp  return_stmt.hpp  statement_type.hpp  var_decl_stmt.cpp  var_decl_stmt.hpp  while_stmt.cpp  (+1 more)
Interpreter/internals/native/: clock.cpp  clock.hpp
Interpreter/test/: parser_test_1.cpp
Interpreter/util/: CMakeLists.txt  colors.cpp  colors.hpp  error.hpp  nonowning_ptr.hpp  print.hpp  try.hpp
(+10 files in other folders)
